2003-11-24  Christopher Faylor  <cgf@redhat.com>

	* configure.in: Avoid using cygserver unless hosting on cygwin.

2003-11-23  Christopher Faylor  <cgf@redhat.com>

	* sigproc.cc (sig_send): Correct below checkin.  Use
	thisframe.call_signal_handler.

2003-11-23  Christopher Faylor  <cgf@redhat.com>

	* sigproc.cc (proc_exists): A zombie process does not exist.
	(sig_send): Improve debugging output.  Wait for pipe to be created
	before trying to send to it.  Call call_signal_handler_now if sending a
	signal to myself.

2003-11-22  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (check_sanity_and_sync): Correct api major version check so
	that newer dlls will work with older apps but not vice versa.

2003-11-21  Christopher Faylor  <cgf@redhat.com>

	* sem.cc: Always include signal.h to handle SIGSYS raise when
	!USE_SERVER.
	* shm.cc: Ditto.

2003-11-21  Christopher Faylor  <cgf@redhat.com>

	* msg.cc: Always include signal.h to handle SIGSYS raise when
	!USE_SERVER.

2003-11-20  Christopher Faylor  <cgf@redhat.com>

	* configure.in: Make --use-server the default.  Remove powerpc target.
	* configure: Regenerate.

2003-11-20  Corinna Vinschen  <corinna@vinschen.de>

	* msg.cc (msgctl): Raise SIGSYS if call not available.
	(msgget): Ditto.
	(msgrcv): Ditto.
	(msgsnd): Ditto.
	* sem.cc (semctl): Ditto.
	(semget): Ditto.
	(semop): Ditto.
	* shm.cc (shmat): Ditto.
	(shmctl): Ditto.
	(shmget): Ditto.
	(shmdt): Ditto.

2003-11-19  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.h (client_request::request_code_t): Add
	CYGSERVER_REQUEST_MSG and CYGSERVER_REQUEST_SEM.
	(admininstrator_group_sid): Add extern declaration.
	* cygserver_ipc.h: Rewrite.
	* cygserver_msg.h: New file.
	* cygserver_sem.h: New file.
	* cygserver_shm.h: More or less rewrite.
	* cygwin.din: Add msgctl, msgget, msgrcv, msgsnd, semctl, semget and
	semop.
	* msg.cc: Rewrite.
	* safe_memory.h: Remove.
	* sem.cc: Rewrite.
	* shm.cc: Rewrite.
	* include/cygwin/ipc.h: Use appropriate guard.